--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="#" class="buy-btn">Buy Now</a>
+                <a href="#" class="buy-btn" data-button-text="Free Plan">Buy Now</a>
               </div>
 
             </div>
@@ -860,7 +860,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="#" class="buy-btn">Buy Now</a>
+                <a href="#" class="buy-btn" data-button-text="Business Plan">Buy Now</a>
               </div>
 
             </div>
@@ -883,7 +883,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="#" class="buy-btn">Buy Now</a>
+                <a href="#" class="buy-btn" data-button-text="Developer Plan">Buy Now</a>
               </div>
 
             </div>
