--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -821,7 +821,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="pricing-item">
 
-              <div class="pricing-header" data-button-text="Free Plan">
+              <div class="pricing-header" >
                 <h3>Free Plan</h3>
                 <h4><sup>$</sup>0<span> / month</span></h4>
               </div>
@@ -835,7 +835,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="#" class="buy-btn" >Buy Now</a>
+                <a href="#" class="buy-btn" data-button-text="Free Plan">Buy Now</a>
               </div>
 
             </div>
@@ -844,7 +844,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="400">
             <div class="pricing-item featured">
 
-              <div class="pricing-header" data-button-text="Business Plan">
+              <div class="pricing-header" >
                 <h3>Business Plan</h3>
                 <h4><sup>$</sup>29<span> / month</span></h4>
               </div>
@@ -860,7 +860,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="#" class="buy-btn">Buy Now</a>
+                <a href="#" class="buy-btn" data-button-text="Business Plan">Buy Now</a>
               </div>
 
             </div>
@@ -869,7 +869,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="600">
             <div class="pricing-item">
 
-              <div class="pricing-header" data-button-text="Developer Plan">
+              <div class="pricing-header" >
                 <h3>Developer Plan</h3>
                 <h4><sup>$</sup>49<span> / month</span></h4>
               </div>
@@ -883,7 +883,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="#" class="buy-btn" >Buy Now</a>
+                <a href="#" class="buy-btn" data-button-text="Developer Plan">Buy Now</a>
               </div>
 
             </div>
