--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="testimonials-slider swiper">
           <div class="swiper-wrapper">
 
-            <div class="swiper-slide" data_item="0">
+            <div class="swiper-slide">
               <div class="testimonial-item" >
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
                 <h3>Saul Goodman</h3>
@@ -736,7 +736,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide"data_item="1">
+            <div class="swiper-slide">
               <div class="testimonial-item" >
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                 <h3>Sara Wilsson</h3>
@@ -752,7 +752,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide" data_item="2">
+            <div class="swiper-slide">
               <div class="testimonial-item" >
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                 <h3>Jena Karlis</h3>
@@ -768,7 +768,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide" data_item="3">
+            <div class="swiper-slide">
               <div class="testimonial-item" >
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                 <h3>Matt Brandon</h3>
@@ -784,7 +784,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide" data_item="4">
+            <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>John Larson</h3>
